tests/algorithms/x/Scala/machine_learning/multilayer_perceptron_classifier.error
exit status 1
/workspace/mochi/tests/algorithms/x/Scala/machine_learning/multilayer_perceptron_classifier.scala:97: error: overloaded method value apply with alternatives:
  (x: java.math.BigInteger)scala.math.BigInt <and>
  (x: String)scala.math.BigInt <and>
  (x: Array[Byte])scala.math.BigInt <and>
  (l: Long)scala.math.BigInt <and>
  (i: Int)scala.math.BigInt
 cannot be applied to (scala.math.BigInt)
    preds = preds :+ BigInt(label)
                     ^
one error found
